Fixed dark mode of pages

--- a/my-app/src/GenrePage.css
+++ b/my-app/src/GenrePage.css
@@ -70,7 +70,7 @@ Genre Page Styles
   .books-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 15px;
+    gap: 13.5px;
     justify-content:center;}
   
   .book-card {
@@ -191,12 +191,15 @@ Genre Page Styles
     
     --primary-color: #0e0e0e;
     --primary-light: rgba(227, 231, 234, 0.796);
-    --card-bg: #505050; /* Your white-ish background for cards */
+    /* --card-bg: #505050; Your white-ish background for cards */
+    --card-bg:#2a2a2a;
+    
     /* --card-bg: #e3dfdf; */
     --text-color: #161515; /* General text color */
-    --secondary-text: #242323; /* Secondary text color */
+    /* --secondary-text: #242323; Secondary text color */
+    --secondary-text: #706f6f;
     --genre-heading-color: #f8f6f6; /* New variable for genre headings */
-    --genre-description-color: #000000; /* New variable for genre descriptions */
+    --genre-description-color: #676666; /* New variable for genre descriptions */
     /* --genre-description-color: #4b4b4b; */
   }
 
